[gd_scene load_steps=37 format=3 uid="uid://dcyj00njqrh60"]

[ext_resource type="Script" uid="uid://djf6tlv6dfd75" path="res://Scripts/player.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://p4hqsfpbikgv" path="res://Sprites/Dude/Idle.png" id="2_cvnsp"]
[ext_resource type="Texture2D" uid="uid://cky0dxp4kgbsv" path="res://Sprites/Dude/Jump.png" id="3_vgqql"]
[ext_resource type="Texture2D" uid="uid://kt1tc38qxyu0" path="res://Sprites/Dude/Sprint.png" id="4_vgqql"]
[ext_resource type="PackedScene" uid="uid://ckdai2qhtnecf" path="res://Scripts/player_control/state_machine.tscn" id="5_fkybt"]
[ext_resource type="Script" uid="uid://pxbdke6mmyry" path="res://Scripts/player_control/player_states/player_state_idle.gd" id="6_3smsa"]
[ext_resource type="Script" uid="uid://dl7c20a80cq1s" path="res://Scripts/player_control/player_states/player_state_running.gd" id="7_8erm5"]
[ext_resource type="Script" uid="uid://d1fcqqjrwybwd" path="res://Scripts/player_control/player_states/player_state_jumping.gd" id="8_8erm5"]
[ext_resource type="Script" uid="uid://vplfcl0db5k1" path="res://Scripts/player_control/player_states/player_state_falling.gd" id="9_f1ek2"]
[ext_resource type="Script" uid="uid://c23j5k8t18cws" path="res://Scripts/player_control/player_states/player_state_dashing.gd" id="10_tx1dd"]
[ext_resource type="Script" uid="uid://8eapo6q0snux" path="res://Scripts/player_control/player_states/player_state_wall_sliding.gd" id="11_gymyn"]

[sub_resource type="Shader" id="Shader_gymyn"]
code = "// NOTE: Shader automatically converted from Godot Engine 4.4.1.stable's CanvasItemMaterial.

shader_type canvas_item;
render_mode blend_mix;
uniform int particles_anim_h_frames;
uniform int particles_anim_v_frames;
uniform bool particles_anim_loop;

void vertex() {
	float h_frames = float(particles_anim_h_frames);
	float v_frames = float(particles_anim_v_frames);
	VERTEX.xy /= vec2(h_frames, v_frames);
	float particle_total_frames = float(particles_anim_h_frames * particles_anim_v_frames);
	float particle_frame = floor(INSTANCE_CUSTOM.z * float(particle_total_frames));
	if (!particles_anim_loop) {
		particle_frame = clamp(particle_frame, 0.0, particle_total_frames - 1.0);
	} else {
		particle_frame = mod(particle_frame, particle_total_frames);
	}	UV /= vec2(h_frames, v_frames);
	UV += vec2(mod(particle_frame, h_frames) / h_frames, floor((particle_frame + 0.5) / h_frames) / v_frames);
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pu2lt"]
shader = SubResource("Shader_gymyn")
shader_parameter/particles_anim_h_frames = 5
shader_parameter/particles_anim_v_frames = 1
shader_parameter/particles_anim_loop = false

[sub_resource type="Curve" id="Curve_ukyrk"]
_data = [Vector2(0, 0.494279), 0.0, 0.0, 0, 0, Vector2(0.997101, 0.0108695), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_7dp3o"]
curve = SubResource("Curve_ukyrk")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_h4iuc"]
gravity = Vector3(0, 0, 0)
scale_min = 8.0
scale_max = 8.0
alpha_curve = SubResource("CurveTexture_7dp3o")
anim_speed_min = 1.0
anim_speed_max = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gymyn"]
size = Vector2(14.5, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6n3p"]
atlas = ExtResource("3_vgqql")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6t5aa"]
atlas = ExtResource("2_cvnsp")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgqql"]
atlas = ExtResource("2_cvnsp")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkybt"]
atlas = ExtResource("2_cvnsp")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3wgy"]
atlas = ExtResource("2_cvnsp")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3smsa"]
atlas = ExtResource("3_vgqql")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8erm5"]
atlas = ExtResource("3_vgqql")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ek2"]
atlas = ExtResource("3_vgqql")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx1dd"]
atlas = ExtResource("3_vgqql")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gymyn"]
atlas = ExtResource("3_vgqql")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu2lt"]
atlas = ExtResource("4_vgqql")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukyrk"]
atlas = ExtResource("4_vgqql")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dp3o"]
atlas = ExtResource("4_vgqql")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4iuc"]
atlas = ExtResource("4_vgqql")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd4e3"]
atlas = ExtResource("4_vgqql")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqcod"]
atlas = ExtResource("4_vgqql")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_igrcy"]
atlas = ExtResource("4_vgqql")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs7ks"]
atlas = ExtResource("4_vgqql")
region = Rect2(896, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_3smsa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6n3p")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6t5aa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgqql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkybt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3wgy")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3smsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8erm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ek2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx1dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gymyn")
}],
"loop": false,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu2lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukyrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dp3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4iuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd4e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqcod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igrcy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs7ks")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_cvnsp")
speed = 600.0
acceleration = 0.5
jump_force = -1100

[node name="DashParticles" type="GPUParticles2D" parent="."]
material = SubResource("ShaderMaterial_pu2lt")
emitting = false
texture = ExtResource("3_vgqql")
lifetime = 0.5
process_material = SubResource("ParticleProcessMaterial_h4iuc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
top_level = true
position = Vector2(-1.75, 5.5)
shape = SubResource("RectangleShape2D_gymyn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_3smsa")
animation = &"jump"
frame = 4
frame_progress = 1.0

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="StateMachine" parent="." node_paths=PackedStringArray("default_state") instance=ExtResource("5_fkybt")]
default_state = NodePath("PlayerStateIdle")

[node name="PlayerStateIdle" type="Node" parent="StateMachine"]
script = ExtResource("6_3smsa")

[node name="PlayerStateRunning" type="Node" parent="StateMachine"]
script = ExtResource("7_8erm5")

[node name="PlayerStateJumping" type="Node" parent="StateMachine"]
script = ExtResource("8_8erm5")

[node name="PlayerStateFalling" type="Node" parent="StateMachine"]
script = ExtResource("9_f1ek2")

[node name="PlayerStateDashing" type="Node" parent="StateMachine"]
script = ExtResource("10_tx1dd")

[node name="PlayerStateWallSliding" type="Node" parent="StateMachine"]
script = ExtResource("11_gymyn")

[connection signal="timeout" from="JumpBufferTimer" to="." method="_on_jump_buffer_timer_timeout"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_dash_cooldown_timeout"]
[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
